src/test/deca/context/valid/tests/2_assign.deca
// Description:
//    Programme minimaliste utilisant une affectation.
//
// Resultats:
//    Aucun
//
// Historique:
//    cree le 01/01/2022

{
        int i = 2;
}
