src/test/deca/context/invalid/13_Initialization.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 12: ContextualError: Assignment error
// 
// Historique:
//    cree le 01/01/2022

{
	// Doit etre refuse.
   	int i = true;
}
